[metadata]
name = paintnine
version = 0.0.1
description = Make lovely art with plotnine
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/isabelizimm/paintnine
author = Isabel Zimmerman
author_email = i.zimmerman@me.com
license = MIT
keywords = data, plotting, art
classifiers =
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10


[options]
packages = find:
include_package_data = True
zipsafe = False

python_requires = >=3.7
install_requires =
    numpy
    pandas
    plotnine
